fix nav z-index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -221,7 +221,7 @@ body > nav {
   background-color: #898787;
   color: white;
   text-align: center;
-  z-index: 98;
+  z-index: 998;
   min-height: 51px;
 }
 
